[project]
name = "unit-raster-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "npc-io>=0.1.32",
    "panel>=1.6.0",
    "polars[all]>=1.21.0",
    "vegafusion[embed]>=2.0.1",
    "vl-convert-python>=1.7.0",
]
