[project]
name = "unit-raster-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair<5.5.0",
    "ipykernel>=6.29.5",
    "jupyter-bokeh>=4.0.5",
    "npc-ccf-utils",
    "npc-io>=0.1.32",
    "panel>=1.6.0",
    "polars[all]>=1.21.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "vl-convert-python>=1.7.0",
]

[tool.uv.sources]
npc-ccf-utils = { git = "https://github.com/bjhardcastle/npc_ccf_utils" }
